# CEMRA

./: .gitignore  README.md
analysis/: analyse_bags.m  camera.mat  script_camera.m  script_odometry.m
cam/: CMakeLists.txt  manifest.xml
cam/include/cam/: blob_detection.h  blob_detection_simple.h  debug.h  marker_detection.h  p3p.hpp
cam/launch/: blob_debug.launch  node.launch  usb_cam.launch
cam/matlab/: UKF_lie.m  constraints.m  exponential_map_SE3.m  log_map_SE3.m  log_map_SO3.m  opt_1.m  opt_2.m  project_beacon.m  project_fun.m  unscented_kalman_filter.m
cam/msg/: QuadPose.msg  QuadPoseList.msg  detections.msg
cam/msg_gen/cpp/include/cam/: QuadPose.h  QuadPoseList.h  detections.h
cam/msg_gen/lisp/: QuadPose.lisp  QuadPoseList.lisp  _package.lisp  _package_QuadPose.lisp  _package_QuadPoseList.lisp  _package_detections.lisp  cam-msg.asd  detections.lisp
cam/params/: blue_blob_settings.yaml  blue_blob_settings_sim.yaml  image_settings.yaml  image_settings_sim.yaml  red_blob_settings.yaml  red_blob_settings_sim.yaml  tracking_params.yaml  tracking_params_sim.yaml
cam/src/: blob_detection.cpp  blob_detection_debug.cpp  blob_detection_debug_qt.cpp  marker_detection.cpp  marker_detection_old_2.cpp  node.cpp  qtfile.cpp  qtfile.h  usb_cam_node.cpp
cam/src/backup - 8 july/: blob_detection.cpp  blob_detection_debug.cpp  marker_detection.cpp  marker_detection_debug.cpp  p3p.cpp
cam/src/backup 25 aug/: blob_detection_debug.cpp  blob_detection_debug_qt.cpp  marker_detection.cpp  node.cpp  qtfile.cpp  qtfile.h
cam/src/backup_18thAUGUST (blob_detection simple and debug without qt)/: blob_detection.cpp  blob_detection_debug.cpp  blob_detection_simple.cpp
cam/src/backup_7thAUGUST/: blob_detection.cpp  blob_detection_colour_corr.cpp  blob_detection_debug.cpp  blob_detection_debug_qt.cpp  marker_detection.cpp  node.cpp  qtfile.cpp  qtfile.h  usb_cam.cpp
cam/src/cam/msg/: _QuadPose.py  _QuadPoseList.py  __init__.py  _detections.py
cam/src/new/: blob_detection.cpp
cam/src/old/: blob_debug.cpp  blob_detection.cpp  blob_detection_debug.cpp
cam/src/old/old_blob_class/: blob.cpp  blob.h
cam/src/old/old_blob_detections/: blob_detection.cpp  blob_detection.h
cam/src/old_marker_detect/: marker_detection.cpp  node.cpp
cam/src/old_node_and_marker_debug/: main_node.cpp  marker_detection_debug.cpp
cam/src/param_server/: blob_detection_debug.cpp  node.cpp
create_autonomy/ca_driver/nodes/: wakeup.py  (+1 more)
estimator_cam/: CMakeLists.txt  manifest.xml
estimator_cam/analysis/: _robot2_cmd_vel_fixed.txt  _robot2_odom.txt  odometry_evaluation.m  odometry_evaluation.m~
estimator_cam/launch/: node.launch  node_multiple_robots.launch  node_multiple_robots_sim.launch  usb_cam.launch~
estimator_cam/params/: actuation_params.txt  measurement_params.txt  measurement_params_sim.txt
estimator_cam/src/: estimator.cpp  estimator.h  model.cpp  model.h  node.cpp
matlab_simulation/: CMakeLists.txt  cam_generate_image.m  cam_init.m  cam_world2cam.m~  exponential_map_SO3.m  log_merge.txt  mainpage.dox  manifest.xml  marker_set_trajectory.m  script_multi_robot_sim.m  script_multi_robot_sim.m~
matlab_simulation/launch/: bag_merge.launch
matlab_simulation/src/: bag_merge.cpp  cam_world2cam.m  cam_world2cam_rot.m  marker_flash_id_beacons.m  marker_init.m  marker_move.m  script_multi_robot_sim.m
remote_lab/magabot/: CMakeLists.txt  package.xml
remote_lab/magabot/arduino/: Magabot.cpp  arduino.ino
remote_lab/magabot/launch/: camera.launch  camera2.launch  code_execution.launch  gmapping.launch  hector_mapping.launch  magabot.launch  magabot_mapping.launch  manager.launch  manager_multi_robot.launch  record_bag.launch
remote_lab/magabot/msg/: Control.msg  Status.msg  Velocity.msg
remote_lab/magabot/nodes/: code_execution.py  get_laser_readings.py  manager.py  record_bag.py  remove_bags.py
remote_lab/magabot/src/: Controller.cpp  Odometry.cpp  Sensors.cpp  mag_joy_node.cpp  magabot_node.cpp
remote_lab/magabot/srv/: StartRosbag.srv  StopRosbag.srv
remote_lab/magabot/udevadm/: 40-arduino-magabot.rules
remote_lab/magabot/world/: map_lrm_ist.pgm  map_lrm_ist.yaml  map_lrm_rplidar.pgm  map_lrm_rplidar.yaml  map_test.pgm  map_test.yaml
remote_lab/magabot_joy/: CMakeLists.txt  package.xml  teleop.py
remote_lab/scout_ipcam/: CMakeLists.txt  README.txt  package.xml
(+44 files in other folders)
